Improve overlap CSS fix.
Instead of using 1px padding to force the content edge to be inside the element, use a 1px transparent border-top nullified by a 1px negative margin top.

--- a/docroot/sites/all/themes/custom/virginsport/src/scss-overrides/_vs-region.scss
+++ b/docroot/sites/all/themes/custom/virginsport/src/scss-overrides/_vs-region.scss
@@ -61,10 +61,11 @@ html[vs-region-loading="true"] { opacity: 0; }
 .vs-region {
   z-index: 1;
 
-  // IMPORTANT! Without padding the negative margin-top in the first child
-  // element will not work, and negative margin-top is used for the
-  // overlap mechanism.
-  padding-top: 1px;
+  // IMPORTANT! Without border-top the overlap mechanism will not work, as it applies
+  // a negative margin top to the first child of the region. The 1px negative margin
+  // applied in the region is used to nullify the 1px width of the applied border.
+  border-top: 1px solid transparent;
+  margin-top: -1px;
 }
 
 // Ensure children of the region are visible even with the background active
